lintian-brush (0.13) UNRELEASED; urgency=medium

  [ Dmitry Bogatov ]
  * Don't display error when debian/compat is missing. Closes: #921972

  [ Jelmer Vernooĳ ]
  * Allow fixers to provide an empty description when there are no
    changes.

 -- Dmitry Bogatov <KAction@debian.org>  Sun, 10 Feb 2019 22:52:32 +0000

lintian-brush (0.12) unstable; urgency=medium

  * Add --identity flag that shows user identity.
  * Fall back to breezy identity and gecos field if no git identity is
    set. Closes: #921241
  * Make gpg more quiet when manipulating keyring files.
  * Require new Breezy with improved handling of submodule references
    in .git files. Closes: #921240

 -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 07 Feb 2019 05:56:14 +0000

lintian-brush (0.11) unstable; urgency=medium

  [ Jeroen Dekkers ]
  * Add dependency on devscripts. Closes: #919217

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 19 Jan 2019 19:11:40 +0000

lintian-brush (0.10) unstable; urgency=medium

  * Add a (inefficient) --dry-run option. Closes: #915977
  * Add --update-changelog option to force updating of changelog.
  * Add support for systemd-service-file-pidfile-refers-to-var-run.
    Closes: #917565
  * Don't use functionality that is not available in stable by default;
    add a --modern flag to enable use of unstable-only functionality
    (such as debhelper compat levels).
  * Bump debhelper from old 11 to 12.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 15 Dec 2018 17:18:50 +0000

lintian-brush (0.9) unstable; urgency=medium

  * Add CI configuration for Salsa.
  * Add fixer for unnecessary-team-upload.
  * Don't attempt to remove python*-*-dbg packages; they include _d.so
    files that are not in -dbgsym packages.
  * Don't traceback when no .git directory is found.
  * Add fixer for public-upstream-key-not-minimal.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 04 Dec 2018 23:12:14 +0000

lintian-brush (0.7) unstable; urgency=medium
