@@ -1,0 +1,2 @@
+Drop custom source compression.
+Fixed-Lintian-Tags: debian-source-options-has-custom-compression-settings
